增加了留言

--- a/Application/Seller/View/Store/store_setting.html
+++ b/Application/Seller/View/Store/store_setting.html
@@ -76,6 +76,10 @@
                                     <td colspan="2"><input type="text" name="store_aliwangwang" class="input-sm" value="{$store.store_aliwangwang}"></td>
                                 </tr>
                                 <tr>
+                                    <td>邮箱：</td>
+                                    <td colspan="2"><input type="text" name="email" class="input-sm" value="{$store.email}"></td>
+                                </tr>
+                                <tr>
                                 	<td>店铺地址：</td>
                                 	<td colspan="2">
                                 	   <div class="col-xs-2">
